<resources>
    <string name="app_name">Pikasso</string>
    <string name="Color">Color</string>
    <string name="Save">Save</string>
    <string name="Line_width">Line Width</string>
    <string name="Erase">Erase</string>
    <string name="Clear">Clear</string>
    <string name="set_width">set width</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>
    <string name="set_color">set color</string>
</resources>
